--- a/annexes/annexA.tex
+++ b/annexes/annexA.tex
@@ -1,1 +1,54 @@
-\section{Anexo A}
+\section*{Anexo A. Recolección de la información}
+\addcontentsline{toc}{section}{Anexo A. Recolección de la información}
+
+	\subsection*{Encuesta}
+	\addcontentsline{toc}{subsection}{Encuesta}
+	
+	{Para obtener la información base para el desarrollo del proyecto, fue indispensable utilizar la técnica de recolección de información “encuesta”, donde se plasmaron las inquietudes que permitieron estructurar adecuadamente el proyecto.\\
+		
+	La encuesta realizada fue la siguiente (se utilizó la plataforma Formularios de Google para publicar y obtener los resultados de esta):
+	
+	\begin{enumerate}
+		
+		\item ¿Ha recurrido el sistema de “fiado” que utilizan algunos tenderos para adquirir productos?
+		
+			\begin{enumerate}
+				\item Si.
+				\item No.
+			\end{enumerate}
+		
+		\item ¿Ha tenido problemas al momento de pagar sus productos fiados, ya que el monto de la deuda es mayor o menor al que tenía en mente?
+		
+			\begin{enumerate}
+				\item Si.
+				\item No.
+			\end{enumerate}	
+		
+		\item Cuándo realiza un préstamo, ¿dónde realiza el registro de este, para su posterior control?
+			
+			\begin{enumerate}
+				\item Tomo notas en el celular.
+				\item Tomo notas en cuadernos o agendas.
+				\item No tomo notas.
+				\item Otro.
+			\end{enumerate}
+		
+		\item ¿Suele olvidarse de las deudas que tienen algunas personas con usted (personas de confianza)?
+		
+			\begin{enumerate}
+				\item Si.
+				\item No.
+			\end{enumerate}	
+		
+		\item Considera que utilizar una plataforma Web que permita gestionar los fiados y prestamos es:
+		
+			\begin{enumerate}
+				\item Pertinente.
+				\item Innecesaria.
+			\end{enumerate}
+		
+	\end{enumerate}
+	}
+	
+
+	
