--- a/bibliography/books.bib
+++ b/bibliography/books.bib
@@ -1,6 +1,6 @@
 [
 	@book{creditArtJos,
-		author = {Arturo Morales Castro, José Antonio Morales Castro},
+		author = {Arturo Morales Castro and José Antonio Morales Castro},
 		title = {Crédito y Cobranza},
 		year = {2014},
 		edition = 1,
@@ -12,5 +12,26 @@
 		title = {Diseño y programación de bases de datos},
 		year = {2007},	
 		publisher = {VISION LIBROS},
+	}
+
+	@book{dataBase,
+		author = {Avi Silberchatz and Hank Korth and S. Sudarchan},
+		title = {Fundamentos de bases de datos},
+		year = {2006},	
+		publisher = {Mc Graw Hill},
+	}
+
+	@book{methoInv,
+		author = { R. Hernandez and C. Fernandez and P. Batispta},
+		title = {Metodologia de la investigacion},
+		year = {2006},	
+		publisher = {Mc Graw Hill},
+	}
+	
+	@book{learn,
+		author = {Y. Gallardo and A. Moreno},
+		title = {Aprender a investigar,},
+		year = {1999},	
+		publisher = {ARFO EDITORES LTDA},
 	}
 ]
