--- a/description/methodology.tex
+++ b/description/methodology.tex
@@ -1,13 +1,13 @@
-\section{Metodología de la investigación}
+\section{Aspectos metodológicos}
 
 	\subsection{Tipo de estudio}
 	
-	{Dado el tema de investigación, el tipo de estudio a realizar se enmarca dentro del tipo descriptivo, el cual, pretende dar una descripción del objeto de estudio, especificando sus propiedades o atributos más relevantes, para así, fortalecer la justificación del porqué el desarrollo del proyecto, se acudirá a la implementación de técnicas de recolección de información, basadas en la observación, entrevistas y/o cuestionarios, permitiendo la identificación de la tendencia actualmente de las personas, por utilizar plastaformas para alcanzar o conseguir un bien común, tal como se evidencia en plataformas populares como uber, uber eats, rappi, etc.}
+	{Dado el tema de investigación, el tipo de estudio a realizar se enmarca dentro del tipo descriptivo, el cual, pretende dar una descripción del objeto de estudio, especificando sus propiedades o atributos más relevantes, para así, fortalecer la justificación del porqué el desarrollo del proyecto \cite{methoInv}, se acudirá a la implementación de técnicas de recolección de información, basadas en la observación, entrevistas y/o cuestionarios, permitiendo la identificación de la tendencia actualmente de las personas, por utilizar plastaformas para alcanzar o conseguir un bien común, tal como se evidencia en plataformas populares como uber, uber eats, rappi, etc.}
 	
 	
 	\subsection{Método de investigación}
 	
-	{El método a implementar en este estudio investigativo, es el de la observación, el cual, permitirá obtener conocimiento acerca del fenómeno presentado actualmente dentro de las comunidades que emplean medios tecnológicos, se enfoca en observar para obtener información del problema, estimulando la curiosidad e impulsando al desarrollo de nuevos hechos de interés científico, es ideal, para el tipo de estudio planteado, ya que se puede complementar con la utilización de otros procedimientos o técnicas propuestos, como lo son entrevistas y cuestionarios, permitiendo la comparación de los resultados recogidos y obtener una información más precisa, haciendo posible investigar el fenómeno tecnológico directamente}
+	{El método a implementar en este estudio investigativo, es el de la observación, el cual, permitirá obtener conocimiento acerca del fenómeno presentado actualmente dentro de las comunidades que emplean medios tecnológicos, se enfoca en observar para obtener información del problema, estimulando la curiosidad e impulsando al desarrollo de nuevos hechos de interés científico, es ideal, para el tipo de estudio planteado, ya que se puede complementar con la utilización de otros procedimientos o técnicas propuestos, como lo son entrevistas y cuestionarios, permitiendo la comparación de los resultados recogidos y obtener una información más precisa, haciendo posible investigar el fenómeno tecnológico directamente \cite{methoInv,metho}.}
 	
 	
 	\subsection{Fuentes y técnicas para la recolección de la información}
@@ -15,13 +15,13 @@
 	{Para la recolección de información nos basaremos en las fuentes primarias, las cuales, serían los usuarios de tecnologías orientadas a comunidades, como usuarios de Uber, rappi, etc, de ellos, obtendremos la información directa por medio de las técnicas antes mencionadas:
 		
 	\begin{itemize}
-		\item Encuestas: se realiza el registro de situaciones que puedan ser observadas y en ausencia de poder ser recreado un experimento se cuestiona al participante sobre ello.
+		\item \textbf{Encuestas:} se realiza el registro de situaciones que puedan ser observadas y en ausencia de poder ser recreado un experimento se cuestiona al participante sobre ello.
 		
-		\item Experimentación: Se manipulan las variables que rodean la problemática, permitiendo analizar los efectos causados por estos y verificar si las diferencias obtenidas son significativas.
+		\item \textbf{Experimentación:} Se manipulan las variables que rodean la problemática, permitiendo analizar los efectos causados por estos y verificar si las diferencias obtenidas son significativas.
 	\end{itemize}
 		
-	Adicionalmente, se obtendrá información de fuentes secundarias como lo son documentos de internet o medios de comunicación, siempre y cuando, la información sea pertinente y fidedigna.}
+	Adicionalmente, se obtendrá información de fuentes secundarias como lo son documentos de internet o medios de comunicación, siempre y cuando, la información sea pertinente y fidedigna \cite{learn}.}
 	
 	\subsection{Tratamiento de la información}
 	
-	{Se realizará un análisis cualitativo de la información obtenida, realizando una conversión de esta y garantizando una mirada crítica para filtrar la información que constituirá la fuente principal de la investigación, desligando de datos complementarios, que también serán útiles para el desarrollo del proyecto.}
+	{Se realizará un análisis cualitativo de la información obtenida, realizando una conversión de esta y garantizando una mirada crítica para filtrar la información que constituirá la fuente principal de la investigación, desligando de datos complementarios, que también serán útiles para el desarrollo del proyecto \cite{methoqual}.}
