--- a/start/dedication.tex
+++ b/start/dedication.tex
@@ -1,5 +1,5 @@
 \chapter*{\flushright Dedicatoria}
 
 \begin{flushright}
-	\textit{Dedicado a nuestras familias, las cuales han sacrificado \\ tiempo para compartir con nosotros, por nuestro saber.}
+	\textit{Dedicado a nuestras familias, las cuales han sacrificado \\ su tiempo de compartir con nosotros, por nuestro saber.}
 \end{flushright}
