--- a/TG.tex
+++ b/TG.tex
@@ -53,13 +53,22 @@
 			
 	\part{DESARROLLO DE LA INVESTIGACIÓN}
 
-		%\chapter{PRUEBA}
-			%\input{description/problem}
-			%\input{description/objectives}
+		\chapter{ORGANIZACIÓN}
+			\input{development/intro}
+			\input{development/trustme}
+			\input{development/mission}
+			\input{development/view}
+			\input{development/objectives}
+			\input{development/beginning}
+			\input{development/services}
+			\input{development/products}
+			\input{development/processes}
+			\input{development/functions}
 			
-		%\chapter{PRUEBA}
-			%\input{description/problem}
-			%\input{description/objectives}
+		\chapter{ARQUITECTURA EMPRESARIAL}
+			\input{development/deal}
+			\input{development/application}
+			\input{development/technology}
 
 	\part{CIERRE DE LA INVESTIGACIÓN}
 
