--- a/closing/conclusions.tex
+++ b/closing/conclusions.tex
@@ -1,5 +1,11 @@
+Luego de haber finalizado el proyecto, se concluye lo siguiente:
+
 \begin{itemize}
-	\item Conclusion 1.
-	\item Conclusion 2.
-	\item Conclusion 3.
+	
+	\item El uso de la tecnología en el comercio y las estrategias de ventas como “fiar”, son unos pilares influyentes en el aumento de las ventas, pues estos permiten a sus consumidores acceder de forma fácil a sus productos y pagarlos cómodamente, generando satisfacción y fidelización en el cliente.
+	
+	\item Exponer de forma detallada y en tiempo real, las compras, deudas o transacciones realizadas entre el tendero y consumidor, genera un alto grado de confianza al usuario, ya que este, no estará con la incertidumbre referente a los pagos a realizar o ya realizados.
+	
+	\item Mostrar el monto total de las deudas y prestamos de los usuarios, es un mecanismo que ayuda autocontrolar a los mismos en cuanto a la adquisición de nuevas deudas se refiere, pues ellos sabrán lo máximo que pueden endeudarse y con base a eso, limitarse, de igual forma, ayuda a controlar el monto en prestamos a realizar, pues el usuario será consciente de lo máximo que le podrá prestar a otro.
+	
 \end{itemize}
