--- a/closing/results.tex
+++ b/closing/results.tex
@@ -1,5 +1,11 @@
+Con el desarrollo de la aplicación se lograron obtener resultados favorables, los cuales se vieron reflejados en las respuestas dadas por cada uno de los usuarios al responder las encuestas de satisfacción, arrojando lo siguiente:
+
 \begin{itemize}
-	\item Resultado 1.
-	\item Resultado 2.
-	\item Resultado 3.
+	
+	\item De las 23 personas encuestadas, solo 10 desempeñaron un papel como tenderos en la aplicación, de las cuales un 60\% indicaron que sus ventas se mantuvieron, un 30\% aumentaron y un 10\% disminuyeron, si bien, los datos son basados en pruebas, se podría decir que este tipo de aplicación podría aumentar las ventas hasta en un 5\% tal como lo indica un artículo en el periódico el heraldo \cite{LupeTrust} alcanzando el objetivo propuesto para este proyecto.
+	
+	\item De 23 personas desempeñaron un rol como consumidor, el 100\% de estas, reporto que no tenía dudas con respecto a los pagos que debía realizar, pues estos eran claros y les permitía ver en tiempo real el estado de los mismos, evitando incertidumbre entre sus usuarios como se proponía en los objetivos.
+	
+	\item De 23 usuarios de la app, un 26\% indico que esta no les permitía tener un mejor control de sus finanzas, frente a un 74\% que indico lo contrario, resultados sustentados, dado que los usuarios, al ver reflejados el estado actual de todas sus deudas se autolimitaban a gastar más, cumpliendo con el último objetivo propuesto.
+	
 \end{itemize}
