--- a/description/framework.tex
+++ b/description/framework.tex
@@ -1,5 +1,22 @@
 \section{Marco referencial}
 
+	\subsection{Antecedentes}
+	
+		\subsubsection{yotepresto.com}
+		
+		{Es una plataforma web encargada de conectar personas que necesitan un préstamo, con personas que quieren prestar su dinero y obtener un buen rendimiento de él, se basa en un comunidad que va depositando su dinero en un fondo, el cual será utilizado por otras personas que lo necesiten, generando intereses o ganancias, las personas que necesiten un préstamo son consultadas en centrales de riesgo para verificar su historial crediticio y capacidad de pago, y posterior a esto realizarse el desembolso de su crédito gracias al fondo de los que invierten \cite{yotepresto}.\\
+			
+		Si bien yotepresto.com permite gestionar créditos, no se enfoca al mismo negocio planteado en proyecto, pues este pretende suplir la necesidad de los tenderos de vender sus productos por medio de prestamos a sus clientes.\\
+		
+		\begin{figure}[H]
+			\centering
+			\includegraphics[width=0.8\linewidth]{description/framework/yotepresto.png}
+			\caption{Web yotepresto.com}
+		\end{figure}
+		
+		}
+	
+	
 	\subsection{Marco teórico}
 	
 		\subsubsection{Microcrédito}
