--- a/annexes/annexA.tex
+++ b/annexes/annexA.tex
@@ -6,7 +6,7 @@
 	
 	{Para obtener la información base para el desarrollo del proyecto, fue indispensable utilizar la técnica de recolección de información “encuesta”, donde se plasmaron las inquietudes que permitieron estructurar adecuadamente el proyecto.\\
 		
-	Las encuestas realizadas fueron las siguientes (se utilizó la plataforma Formularios de Google para publicar y obtener los resultados de estas):
+	Las encuestas realizadas fueron las siguientes:
 	
 	
 		\subsubsection*{Encuesta 1 - Viabilidad}
