--- a/TG.tex
+++ b/TG.tex
@@ -52,7 +52,12 @@
 			\input{description/methodology}
 			
 	\part{DESARROLLO DE LA INVESTIGACIÓN}
-
+		
+		\chapter{METODOLOGÍA APLICADA}
+			\input{development/cases}
+			\input{development/wireframe}
+			\input{development/database}
+		
 		\chapter{ORGANIZACIÓN}
 			\input{development/intro}
 			\input{development/trustme}
@@ -62,13 +67,13 @@
 			\input{development/beginning}
 			\input{development/services}
 			\input{development/products}
-			\input{development/processes}
-			\input{development/functions}
+			%\input{development/processes}
+			%\input{development/functions}
 			
-		\chapter{ARQUITECTURA EMPRESARIAL}
-			\input{development/deal}
-			\input{development/application}
-			\input{development/technology}
+		%\chapter{ARQUITECTURA EMPRESARIAL}
+			%\input{development/deal}
+			%\input{development/application}
+			%\input{development/technology}
 
 	\part{CIERRE DE LA INVESTIGACIÓN}
 
