--- a/TG.tex
+++ b/TG.tex
@@ -54,6 +54,7 @@
 	\part{DESARROLLO DE LA INVESTIGACIÓN}
 		
 		\chapter{METODOLOGÍA APLICADA}
+			\input{development/scrum}
 			\input{development/cases}
 			\input{development/wireframe}
 			\input{development/database}
@@ -70,8 +71,8 @@
 			%\input{development/processes}
 			%\input{development/functions}
 			
-		%\chapter{ARQUITECTURA EMPRESARIAL}
-			%\input{development/deal}
+		\chapter{ARQUITECTURA EMPRESARIAL}
+			\input{development/deal}
 			%\input{development/application}
 			%\input{development/technology}
 
