--- a/bibliography/online.bib
+++ b/bibliography/online.bib
@@ -59,4 +59,11 @@
 		publisher = {yotepresto},
 		note = { Disponible en \url{https://youtu.be/EQjQ-Z3y1Jw} [Visto el 27/09/2019]}
 	}
+
+	@online{archimate,
+		author = {GROUP, T. O},
+		title = {Archimate 3.1 specification},
+		publisher = {opengroup},
+		note = { Disponible en \url{https://pubs.opengroup.org/architecture/archimate31-doc/} [Visto el 10/11/2019]}
+	}
 ]
